feat: add SQL connection & refactor code into modules
